Compatibility with Java 8 (for PDSOE 11.7)
Path.of is only available in Java 11